# tweety-second-hand-market

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  docker-entrypoint.sh  pyproject.toml  render.yaml
docs/: CHECKLIST.md  DEVELOPMENT_REPORT.md
scripts/: __init__.py  bootstrap_admin.py  build_report.py  create_admin.py  sanitize_uploads.py
tests/: __init__.py  test_app.py
tiny_market/: __init__.py  __main__.py  app.py  config.py  db.py  schema.sql  security.py  views.py  wsgi.py
tiny_market/static/: category-filter.css  notifications.js  style.css  upload-picker.css
