[project]
name = "tiny-market"
version = "1.0.0"
description = "Security-focused tiny second-hand marketplace"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=12.0,<13",
    "gunicorn>=23.0,<24; platform_system != 'Windows'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tiny_market", "scripts"]

[tool.setuptools.package-data]
tiny_market = ["schema.sql", "static/*"]

[tool.ruff]
line-length = 120
target-version = "py311"
